fix for badges not showing

--- a/yabi/yabife/trunk/yabife/static/css/yabi.css
+++ b/yabi/yabife/trunk/yabife/static/css/yabi.css
@@ -1047,7 +1047,7 @@ input {
 	background: -webkit-gradient(linear, left top, left bottom, from(red), to(#f66));
 }
 
-.badgecompleted {
+.badgecompleted, .badgecomplete {
 
 	width:16px;
 	height:16px;
@@ -1087,7 +1087,7 @@ input {
 	z-index:99;
 }
 
-.badgerunning {
+.badgerunning, .badgeready {
 	width:18px;
 	height:18px;
 	padding:0px;
